fixed a missing background colour

--- a/ALD2.NodeJs/public/stylesheets/site.css
+++ b/ALD2.NodeJs/public/stylesheets/site.css
@@ -23,7 +23,7 @@
             -ms-flex: 0 1 auto;
             -webkit-flex: 0 1 auto;
             flex: 0 1 auto;
-            background-color: #6F5499;
+            background-color: #3D567C ;
             background-image: linear-gradient(to bottom, #3D567C 0px, #546F99 100%);
             background-repeat: repeat-x;
             color: white;
